--- a/notebooks/09-Control-Flow-Statements.ipynb
+++ b/notebooks/09-Control-Flow-Statements.ipynb
@@ -74,7 +74,7 @@
     "if x == 0:\n",
     "    print(x, \"is zero\")\n",
     "    \n",
-    "# Other wise if x is greater than zero print x, \"is positive\"\n",
+    "# Otherwise if x is greater than zero print x, \"is positive\"\n",
     "elif x > 0:\n",
     "    print(x, \"is positive\")\n",
     "    \n",
@@ -148,7 +148,7 @@
    "source": [
     "A 'for loop' is a basic and extremely helpful tool in python. \n",
     "\n",
-    "What we are doing here is replace the 'N' with each number within the list ie. [2,3,5,7] sequentionally, and printing the output. \n",
+    "What we are doing here is replace the 'N' with each number within the list ie. [2,3,5,7] sequentially, and printing the output. \n",
     "\n",
     "For each number you printed, you can see it has been placed on a new line. This signifies the loop has restarted on the next value in the list. \n",
     "\n",
@@ -263,7 +263,7 @@
     }
    },
    "source": [
-    "## ``break`` and ``continue``: Fine-tuning your For and  While loops\n",
+    "## ``break`` and ``continue``: Fine-tuning your for and  while loops\n",
     "\n",
     "- ``break`` statement breaks-out of the loop entirely\n",
     "- ``continue`` statement skips the remainder of the current loop, and goes to the next iteration"
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, the result could be accomplished just as well with an ``if-else`` statement, but sometimes the ``continue`` statement can be a more convenient way to express the idea you have in mind:"
+    "In this case, the result could be accomplished just as well with an ``if-else`` statement, but sometimes the ``continue`` statement can be a more convenient way to express the idea you have in mind."
    ]
   },
   {
@@ -458,7 +458,7 @@
    "source": [
     "In this indirect iterator *the full list is never explicitly created!*\n",
     "\n",
-    "Let's try something sily:"
+    "Let's try something silly:"
    ]
   },
   {
@@ -773,9 +773,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "N=5\n",
     "#Solution\n",
@@ -788,13 +801,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
    "source": [
     "#Solution using break\n",
     "for i in range(N):\n",
@@ -804,14 +829,44 @@
     "        print('*', end=' ')\n",
     "    print('')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another solution\n",
+    "for i in range(N):\n",
+    "    print('* '*(i+1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -823,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
