--- a/notebooks/10-Defining-Functions.ipynb
+++ b/notebooks/10-Defining-Functions.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -73,22 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mr Toad is the best!\n",
-      "Congratulations, you have used your first ever python function!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_pet('Mr Toad')"
    ]
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,20 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result"
    ]
@@ -165,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,22 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fibonacci(10)\n",
     "# Now we can call the function by typing the name, and putting a value of our choice into the function using brackets. "
@@ -269,30 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "fibonacci() takes 1 positional argument but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-5f29750ef87c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfibonacci\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# This doesn't work?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Why?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Well, we have not told the function that 'a, b' should be the values '0, 2'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Time to redesign the function a bit!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: fibonacci() takes 1 positional argument but 3 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fibonacci(10, 1, 1)\n",
     "# This doesn't work? \n",
     "# Why?\n",
-    "# Well, we have not told the function that 'a, b' should be the values '0, 2'\n",
+    "# Well, we have not told the function that 'a, b' should be the values '1, 1'\n",
     "# Time to redesign the function a bit! "
    ]
   },
@@ -310,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,20 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fibonacci(b=34, a=21, n=10)"
    ]
@@ -371,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +341,7 @@
     "    theta: air potential temperature (K)\n",
     "    \"\"\"\n",
     "    theta = t * (p0 / p) **(r_d / c_p)\n",
-    "    return theta"
+    "    return theta\n"
    ]
   },
   {
@@ -422,12 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "# help(calc_theta)"
+    "#help(calc_theta)"
    ]
   },
   {
@@ -447,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,36 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "args = (1, 2, 3)\n",
-      "kwargs =  {'python': 4, 'conda': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "catch_all(1, 2, 3, python=4, conda=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "args = ('a',)\n",
-      "kwargs =  {'keyword': 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "catch_all('a', keyword=2)"
    ]
@@ -580,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,20 +527,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted([2,4,3,5,1,6])"
    ]
@@ -627,22 +544,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
-       " {'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
-       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sort alphabetically by first name\n",
     "sorted(data, key=lambda item: item['first'])"
@@ -650,22 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
-       " {'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
-       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sort by year of birth\n",
     "sorted(data, key=lambda item: item['YOB'])"
@@ -682,22 +573,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'first': 'Grace', 'last': 'Hopper', 'YOB': 1906},\n",
-       " {'first': 'Alan', 'last': 'Turing', 'YOB': 1912},\n",
-       " {'first': 'Guido', 'last': 'Van Rossum', 'YOB': 1956}]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def by_lastn(dic):\n",
     "    return dic['last']\n",
