--- a/notebooks/06-Built-in-Scalar-Types.ipynb
+++ b/notebooks/06-Built-in-Scalar-Types.ipynb
@@ -717,9 +717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "0732ee19-2ba6-4b1e-b9d6-2cb4571ed65f"
     },
@@ -734,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "nbpresent": {
      "id": "b1534a79-a201-4ce6-85f3-895645432cc6"
@@ -747,16 +746,16 @@
     {
      "data": {
       "text/plain": [
-       "['05-Built-in-Scalar-Types.ipynb']"
+       "['06', 'Built', 'in', 'Scalar', 'Types.ipynb']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "notebook_name.split()"
+    "notebook_name.split('-')"
    ]
   },
   {
@@ -924,16 +923,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-12ea5d99ee9c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"0123456789\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
-    "# s = \"0123456789\"\n",
-    "# s[0] = 1"
+    "s = \"0123456789\"\n",
+    "s[0] = 1"
    ]
   },
   {
@@ -963,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -976,7 +987,7 @@
        "'2.7183 is a float'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
