--- a/notebooks/solutions/11-Ex-Build-A-Program-Solution.ipynb
+++ b/notebooks/solutions/11-Ex-Build-A-Program-Solution.ipynb
@@ -336,9 +336,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -350,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
