Updated lunch sub-heading

--- a/notebooks/Welcome.ipynb
+++ b/notebooks/Welcome.ipynb
@@ -50,14 +50,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lunch at 12h45! (not 12h15 as in the programme)\n",
+    "### Lunch\n",
     "\n",
-    "* Cheese sandwiches          14\n",
-    "* Cheese(gluten free)        2\n",
-    "* Houmous                    5\n",
-    "* Salad (g.f. vegan)         1\n",
-    "* Tuna                       11\n",
-    "* Pork                       11"
+    "Times will vary each day, but are generally 12:00-12:30.\n",
+    "\n",
+    "It will consist of a selection of wraps, sandwiches, fruit, and falafel, and will be labelled to their specific meat and allergen content where appropriate. If you have any questions about any of the food, please don't hesitate to ask at lunchtime.\n",
+    "\n"
    ]
   }
  ],
