cut material from matplotlib

--- a/notebooks/15-Matplotlib.ipynb
+++ b/notebooks/15-Matplotlib.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Plot data\n",
-    "fig, axes = plt.subplots()\n",
+    "fig, axes = plt.subplots() # calling subplots without any arguments creates a one axes by default\n",
     "axes.plot(X, Y1)\n",
     "axes.plot(X, Y2);"
    ]
@@ -177,7 +177,7 @@
     "# Plot data (with explicit plotting settings)\n",
     "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(6,4))\n",
     "axes.plot(X, Y1, color='C0', linewidth=5.0, linestyle='-',alpha=0.5)\n",
-    "axes.plot(X, Y2, color='C1', linewidth=3.0, linestyle='--')"
+    "axes.plot(X, Y2, color='r', linewidth=3.0, linestyle='--')"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "**Exersise 2 (5 mins)**. Add a legend.\n",
     "1. Give both cosine functions a name by adding an extra keyword argument, a label, to `axes.plot()`.\n",
-    "2. Add a legend object to **Axes**. "
+    "2. Add a legend object to **Axes**."
    ]
   },
   {
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To practice out plotting we are going to work with data from the NOAA ESRL Carbon Cycle Cooperative Global Air Sampling Network.\n",
+    "To practice our plotting we are going to work with data from the NOAA ESRL Carbon Cycle Cooperative Global Air Sampling Network.\n",
     "\n",
     "Source: https://www.esrl.noaa.gov/gmd/dv/data/\n",
     "\n",
@@ -344,29 +344,6 @@
     "This function has a lot parameters that you can adjuct to fit  your data format. Here we use only:\n",
     "\n",
     "`np.loadtxt(fname, skiprows=..., usecols=..., unpack=...)`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Tip: you can do the same with `np.genfromtxt()`. `np.genfromtxt()` provides more sophisticated handling of, e.g., lines with missing values. However, keyword agrument names slightly differ from those in `np.loadtxt()`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.genfromtxt() # hit Shift+Tab+Tab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Out dataset is very simple and does not have any missing values, so lets use `np.loadtxt()`."
    ]
   },
   {
@@ -757,24 +734,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 5 (10 mins)**. Play with the values in `plt.scatter()` function to explore the effect of different sizes, markers, colormaps etc.\n",
-    "\n",
-    "** Tip: find your favourite [marker](https://matplotlib.org/api/markers_api.html)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Countour and countourf plots"
    ]
   },
@@ -893,7 +852,7 @@
     "fig.colorbar(mappable2, ax=ax2)\n",
     "fig.colorbar(mappable3, ax=ax3);\n",
     "\n",
-    "fig.savefig('../figures/MY_AWESOME_FIGURE.png', dpi=300, facecolor='moccasin', bbox_inches='tight')"
+    "# fig.savefig('../figures/MY_AWESOME_FIGURE.png', dpi=300, facecolor='moccasin', bbox_inches='tight')"
    ]
   },
   {
@@ -1085,7 +1044,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   },
   "nbpresent": {
    "slides": {
