--- a/notebooks/12-Modules-and-Packages.ipynb
+++ b/notebooks/12-Modules-and-Packages.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "## Importing from Python's Standard Library\n",
     "\n",
-    "Python's standard library contains many useful built-in module. To name but a few:\n",
+    "Python's standard library contains many useful built-in modules. To name but a few:\n",
     "\n",
     "- ``collections``: container datatypes\n",
     "- ``logging``: logging the execution of a script\n",
@@ -311,9 +311,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:course2019]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-course2019-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
