added explanations on different if-elif situations

--- a/notebooks/09-Control-Flow-Statements.ipynb
+++ b/notebooks/09-Control-Flow-Statements.ipynb
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Condition satisfied\n"
+     ]
+    }
+   ],
    "source": [
     "foo = 'bar'\n",
     "\n",
@@ -60,13 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15 is negative\n"
+     ]
+    }
+   ],
    "source": [
     "x = -15\n",
     "\n",
@@ -74,7 +90,7 @@
     "if x == 0:\n",
     "    print(x, \"is zero\")\n",
     "    \n",
-    "# Otherwise if x is greater than zero print x, \"is positive\"\n",
+    "# Other wise if x is greater than zero print x, \"is positive\"\n",
     "elif x > 0:\n",
     "    print(x, \"is positive\")\n",
     "    \n",
@@ -88,6 +104,91 @@
    "metadata": {},
    "source": [
     "Note especially the use of colons (``:``) and whitespace to denote separate blocks of code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if you have two conditions that are True? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15 is divisible by three.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if x % 3 == 0:\n",
+    "    print(x, \"is divisible by three.\")\n",
+    "elif x < 0:\n",
+    "    print(x, \"is negative.\")\n",
+    "else:\n",
+    "    print(x, \"is something else.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that while both the 'if' and 'elif' condition were true, it ignored the second condition, because it was already satisfied, there is an implicit hierarchy.\n",
+    "\n",
+    "If you want it to recognise both conditions, there are two ways, depending on what exactly you want to achieve;\n",
+    "Use two if-statements, no elif:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15 is divisible by three.\n",
+      "-15 is negative.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if x % 3 == 0:\n",
+    "    print(x, \"is divisible by three.\")\n",
+    "if x < 0:\n",
+    "    print(x, \"is negative.\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use one if-statement with an 'and':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15 id both negative and divisible by 3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if x % 3 == 0 and x < 0:\n",
+    "    print(x, \"id both negative and divisible by 3.\")"
    ]
   },
   {
@@ -117,11 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "for N in [2, 3, 5, 7]: \n",
     "    print(N) "
@@ -148,7 +260,7 @@
    "source": [
     "A 'for loop' is a basic and extremely helpful tool in python. \n",
     "\n",
-    "What we are doing here is replace the 'N' with each number within the list ie. [2,3,5,7] sequentially, and printing the output. \n",
+    "What we are doing here is replace the 'N' with each number within the list ie. [2,3,5,7] sequentionally, and printing the output. \n",
     "\n",
     "For each number you printed, you can see it has been placed on a new line. This signifies the loop has restarted on the next value in the list. \n",
     "\n",
@@ -263,7 +375,7 @@
     }
    },
    "source": [
-    "## ``break`` and ``continue``: Fine-tuning your for and  while loops\n",
+    "## ``break`` and ``continue``: Fine-tuning your For and  While loops\n",
     "\n",
     "- ``break`` statement breaks-out of the loop entirely\n",
     "- ``continue`` statement skips the remainder of the current loop, and goes to the next iteration"
@@ -297,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, the result could be accomplished just as well with an ``if-else`` statement, but sometimes the ``continue`` statement can be a more convenient way to express the idea you have in mind."
+    "In this case, the result could be accomplished just as well with an ``if-else`` statement, but sometimes the ``continue`` statement can be a more convenient way to express the idea you have in mind:"
    ]
   },
   {
@@ -458,7 +570,7 @@
    "source": [
     "In this indirect iterator *the full list is never explicitly created!*\n",
     "\n",
-    "Let's try something silly:"
+    "Let's try something sily:"
    ]
   },
   {
@@ -773,22 +885,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n",
-      "* * * * * \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N=5\n",
     "#Solution\n",
@@ -801,25 +900,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n",
-      "* * * * * \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Solution using break\n",
     "for i in range(N):\n",
@@ -829,36 +916,6 @@
     "        print('*', end=' ')\n",
     "    print('')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n",
-      "* * * * * \n"
-     ]
-    }
-   ],
-   "source": [
-    "# Another solution\n",
-    "for i in range(N):\n",
-    "    print('* '*(i+1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
