an extra explanation (markdown) for use of 'or'

--- a/notebooks/09-Control-Flow-Statements.ipynb
+++ b/notebooks/09-Control-Flow-Statements.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,12 +170,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use one if-statement with an 'and':"
+    "Use one if-statement with an **and**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,13 @@
    "source": [
     "if x % 3 == 0 and x < 0:\n",
     "    print(x, \"id both negative and divisible by 3.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you wanted to have an action done if only one of the two conditions are true, and both are **equally important**, then you can use **or**."
    ]
   },
   {
@@ -218,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
