--- a/notebooks/09-Control-Flow-Statements.ipynb
+++ b/notebooks/09-Control-Flow-Statements.ipynb
@@ -47,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Condition satisfied\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "foo = 'bar'\n",
     "\n",
@@ -68,21 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-15 is negative\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = -15\n",
     "\n",
@@ -115,17 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-15 is divisible by three.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if x % 3 == 0:\n",
     "    print(x, \"is divisible by three.\")\n",
@@ -147,18 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-15 is divisible by three.\n",
-      "-15 is negative.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if x % 3 == 0:\n",
     "    print(x, \"is divisible by three.\")\n",
@@ -175,17 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-15 id both negative and divisible by 3.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if x % 3 == 0 and x < 0:\n",
     "    print(x, \"id both negative and divisible by 3.\")"
@@ -225,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -276,13 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 5 7 "
+     ]
+    }
+   ],
    "source": [
     "for N in [2, 3, 5, 7]: # you can replace 'N' with anything you like, but make sure to replace it below too!\n",
     "    print(N, end=' ') # print all on same line"
@@ -302,9 +269,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10):   # Here we have replaced 'N' with 'i' \n",
     "    print(i)          #print(i, end=' ')"
@@ -323,9 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# range from 5 to 10\n",
     "list(range(5, 10))"
@@ -333,9 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# range from 0 to 10 by 2\n",
     "list(range(0, 10, 2))"
@@ -357,9 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 10:\n",
@@ -401,14 +415,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 7 9 11 13 15 17 19 "
+     ]
+    }
+   ],
    "source": [
     "for n in range(20):\n",
     "    # check if n is even\n",
     "    if n % 2 == 0:\n",
-    "        continue\n",
+    "        continue # don't do anything here, just move on\n",
     "    print(n,end=\" \")"
    ]
   },
@@ -433,9 +455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n"
+     ]
+    }
+   ],
    "source": [
     "a, b = 0, 1\n",
     "amax = 100\n",
@@ -486,6 +516,15 @@
     "print('\\*',end=' ')   # to print '\\*' without changing line\n",
     "print('')            # change line\n",
     "</code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code"
    ]
   },
   {
