--- a/notebooks/09-Control-Flow-Statements.ipynb
+++ b/notebooks/09-Control-Flow-Statements.ipynb
@@ -184,22 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n",
-      "5\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for N in [2, 3, 5, 7]: \n",
     "    print(N) "
@@ -235,21 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 3 5 7 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for N in [2, 3, 5, 7]: # you can replace 'N' with anything you like, but make sure to replace it below too!\n",
     "    print(N, end=' ') # print all on same line"
@@ -269,26 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(10):   # Here we have replaced 'N' with 'i' \n",
     "    print(i)          #print(i, end=' ')"
@@ -307,20 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# range from 5 to 10\n",
     "list(range(5, 10))"
@@ -328,20 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2, 4, 6, 8]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# range from 0 to 10 by 2\n",
     "list(range(0, 10, 2))"
@@ -363,17 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 2 3 4 5 6 7 8 9 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 0\n",
     "while i < 10:\n",
@@ -415,17 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 3 5 7 9 11 13 15 17 19 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for n in range(20):\n",
     "    # check if n is even\n",
@@ -455,17 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b = 0, 1\n",
     "amax = 100\n",
@@ -616,7 +534,7 @@
    "source": [
     "In this indirect iterator *the full list is never explicitly created!*\n",
     "\n",
-    "Let's try something sily:"
+    "Let's try something silly:"
    ]
   },
   {
@@ -721,6 +639,23 @@
    "outputs": [],
    "source": [
     "for i, val in enumerate(L):\n",
+    "    print(i, val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "enumerate accepts an additional optional argument:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, val in enumerate(L, 1): # we start the counter at 1, not 0!\n",
     "    print(i, val)"
    ]
   },
