Added variable type tables to end of notebook

--- a/notebooks/04-Semantics-Variables.ipynb
+++ b/notebooks/04-Semantics-Variables.ipynb
@@ -305,22 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x = 15\n",
-      "y = 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "y = x\n",
@@ -407,21 +398,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.5 + 0.0 i\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 4.5\n",
     "print(x.real, \"+\", x.imag, 'i')"
@@ -441,24 +424,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 4.5\n",
     "x.is_integer()"
@@ -466,24 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 4.0\n",
     "x.is_integer()"
@@ -522,6 +483,48 @@
    },
    "source": [
     "We'll find that the everything-is-object design choice of Python allows for some very convenient language constructs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Built-in types of variables\n",
+    "\n",
+    "<center>**Python Scalar Types or Simple Types**</center>\n",
+    "\n",
+    "| Type        | Example        | Description                                                  |\n",
+    "|-------------|----------------|--------------------------------------------------------------|\n",
+    "| ``int``     | ``x = 1``      | integers (i.e., whole numbers)                               |\n",
+    "| ``float``   | ``x = 1.0``    | floating-point numbers (i.e., real numbers)                  |\n",
+    "| ``complex`` | ``x = 1 + 2j`` | Complex numbers (i.e., numbers with real and imaginary part) |\n",
+    "| ``bool``    | ``x = True``   | Boolean: True/False values                                   |\n",
+    "| ``str``     | ``x = 'abc'``  | String: characters or text                                   |\n",
+    "| ``NoneType``| ``x = None``   | Special object indicating nulls                              |\n",
+    "\n",
+    "\n",
+    "\n",
+    "<center>**Data Structures**</center>\n",
+    "\n",
+    "| Type Name | Example                   |Description                            |\n",
+    "|-----------|---------------------------|---------------------------------------|\n",
+    "| ``list``  | ``[1, 2, 3]``             | Ordered collection                    |\n",
+    "| ``tuple`` | ``(1, 2, 3)``             | Immutable ordered collection          |\n",
+    "| ``dict``  | ``{'a':1, 'b':2, 'c':3}`` | Unordered (key,value) mapping         |\n",
+    "| ``set``   | ``{1, 2, 3}``             | Unordered collection of unique values |\n",
+    "\n",
+    "Note, round, square, and curly brackets have distinct meanings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please read notebooks \n",
+    "06-Built-in-Scalar-Types.ipynb \n",
+    "and \n",
+    "07-Built-in-Data-Structures.ipynb  \n",
+    "at your leisure to learn about these various types in great detail. They contain useful "
    ]
   },
   {
